--- a/requirements.txt
+++ b/requirements.txt
@@ -18,5 +18,10 @@ scikit-learn>=1.0.0
 # Streamlit web framework
 streamlit>=1.28.0
 
+# FastAPI for REST API
+fastapi>=0.100.0,<0.110.0
+uvicorn>=0.23.0
+python-multipart>=0.0.6
+
 # Fix protobuf compatibility
 protobuf>=3.19.0,<4.0.0
