--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 # Plant Village Disease Classification - Development Docker Compose
-# Changes to source files are reflected immediately without rebuilding
+# All traffic goes through nginx on port 8501
 
 services:
   plant-disease-classifier:
@@ -9,22 +9,23 @@ services:
     container_name: plant-village-dev
     ports:
       - "8501:8501"
-      - "8000:8000"
     volumes:
       # Mount source code for live reload during development
       - ./app.py:/app/app.py:ro
       - ./model.py:/app/model.py:ro
       - ./ui.py:/app/ui.py:ro
       - ./api.py:/app/api.py:ro
-      - ./start.sh:/app/start.sh:ro
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - ./.streamlit:/app/.streamlit:ro
       # Mount TFLite model and class dict (read-only)
       - "./prediction_model.tflite:/app/prediction_model.tflite:ro"
       - "./Plant Village Disease-class_dict.csv:/app/Plant Village Disease-class_dict.csv:ro"
     environment:
-      - STREAMLIT_SERVER_PORT=8501
-      - STREAMLIT_SERVER_ADDRESS=0.0.0.0
+      - STREAMLIT_SERVER_PORT=8502
+      - STREAMLIT_SERVER_ADDRESS=127.0.0.1
       - STREAMLIT_SERVER_HEADLESS=true
       - STREAMLIT_SERVER_RUN_ON_SAVE=true
       - STREAMLIT_BROWSER_GATHER_USAGE_STATS=false
+      - API_SECRET_KEY=${API_SECRET_KEY}
     restart: unless-stopped
+
