--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,28 @@
 # Plant Village Disease Classification - Dependencies
 # Compatible with Python 3.10
+# Versions pinned for faster Docker builds
 
 # Core ML libraries
 tensorflow==2.13.0
-numpy>=1.21.0,<2.0.0
-pandas>=1.3.0
+numpy==1.24.3
+pandas==2.3.3
 
 # Image processing
-opencv-python-headless>=4.5.0
-Pillow>=9.0.0
+opencv-python-headless==4.11.0.86
+Pillow==12.0.0
 
 # Visualization
-matplotlib>=3.5.0
-seaborn>=0.12.0
-scikit-learn>=1.0.0
+matplotlib==3.10.8
+seaborn==0.13.2
+scikit-learn==1.7.2
 
 # Streamlit web framework
-streamlit>=1.28.0
+streamlit==1.52.2
 
 # FastAPI for REST API
-fastapi>=0.100.0,<0.110.0
-uvicorn>=0.23.0
-python-multipart>=0.0.6
+fastapi==0.103.2
+uvicorn==0.40.0
+python-multipart==0.0.21
 
 # Fix protobuf compatibility
-protobuf>=3.19.0,<4.0.0
+protobuf==3.20.3
